# hsys

./: .clangd  CMakeLists.txt  README.md  ПР1_Федченко.docx
work1/: CMakeLists.txt
work1/benchmarks/: CMakeLists.txt
work1/benchmarks/src/: benchmarks.cu
work1/core/: CMakeLists.txt
work1/core/include/work1/: data_block.cuh  kinds.cuh  vector.cuh  vector_accessor.cuh  vector_operators.cuh
work1/core/include/work1/kernels/: kernel_vector_add.cuh
work1/tests/: CMakeLists.txt
work1/tests/src/: add_test.cu  vector_add_test.cu  vector_test.cu
